BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_Integration_Logs__c.object
<CustomObject>
    <description>This is used to track request and response messages for integrations</description>
    <fields>
        <fullName>Apex_Job_ID__c</fullName>
        <label>Apex job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataAllowanceTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Allowance Transaction</label>
        <referenceTo>Data_Allowance_transaction__c</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoke Purge API</fullName>
                </value>
                <value>
                    <fullName>Create Installation &amp; Provisioning task</fullName>
                </value>
                <value>
                    <fullName>Invoke CLO API of DSS</fullName>
                </value>
                <value>
                    <fullName>Service Prequal Callout</fullName>
                </value>
                <value>
                    <fullName>Credit Check Callout</fullName>
                </value>
                <value>
                    <fullName>Address Validation</fullName>
                </value>
                <value>
                    <fullName>Get Account Info</fullName>
                </value>
                <value>
                    <fullName>Invoke Billing API</fullName>
                </value>
                <value>
                    <fullName>Invoke Billing Spec API</fullName>
                </value>
                <value>
                    <fullName>Activate Vouchers</fullName>
                </value>
                <value>
                    <fullName>Add Bandwidth</fullName>
                </value>
                <value>
                    <fullName>BRM WS Service</fullName>
                </value>
                <value>
                    <fullName>Create Existing Customer Location Order</fullName>
                </value>
                <value>
                    <fullName>Download Vouchers</fullName>
                </value>
                <value>
                    <fullName>FAP</fullName>
                </value>
                <value>
                    <fullName>Fetch Account/Contact Information</fullName>
                </value>
                <value>
                    <fullName>Fetch Account Status</fullName>
                </value>
                <value>
                    <fullName>Fetch Current Usage</fullName>
                </value>
                <value>
                    <fullName>Fetch Historical Usage</fullName>
                </value>
                <value>
                    <fullName>Fetch SP Voucher Balance</fullName>
                </value>
                <value>
                    <fullName>Fetch Subscriber Details</fullName>
                </value>
                <value>
                    <fullName>Fetch Voucher Batch Status</fullName>
                </value>
                <value>
                    <fullName>Fetch Voucher Status</fullName>
                </value>
                <value>
                    <fullName>Generate Voucher Batch</fullName>
                </value>
                <value>
                    <fullName>GetbandwidthInfo</fullName>
                </value>
                <value>
                    <fullName>Get Bandwidth Info</fullName>
                </value>
                <value>
                    <fullName>Get FAP Status</fullName>
                </value>
                <value>
                    <fullName>Get SP Account Balance</fullName>
                </value>
                <value>
                    <fullName>Get SP Voucher Account Balance</fullName>
                </value>
                <value>
                    <fullName>Get Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Related_to__c</fullName>
        <label>Related to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Request_Message__c</fullName>
        <label>Request Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Response_Message__c</fullName>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Response_Status__c</fullName>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Source__c</fullName>
        <label>Source</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Target_URL__c</fullName>
        <label>Target URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HSvc_Target__c</fullName>
        <description>Class Name</description>
        <label>Target</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Request &amp; Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Order Name</label>
        <referenceTo>Location_Order__c</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Timestamp__c</fullName>
        <description>Created as per Data Model Sync Up D-00865 By Varsha</description>
        <label>Request Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Timestamp__c</fullName>
        <description>Created as per Data Model Sync Up D-00865 By Varsha</description>
        <label>Response Timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>HSvc_Operation__c</columns>
        <columns>Location_Order__c</columns>
        <columns>HSvc_Target_URL__c</columns>
        <columns>HSvc_Request_Message__c</columns>
        <columns>HSvc_Response_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllSSView</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Location_Order__c</columns>
        <columns>HSvc_Operation__c</columns>
        <columns>HSvc_Source__c</columns>
        <columns>HSvc_Response_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All-SSView</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Send_SMS</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Request_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>HSvc_Response_Status__c</columns>
        <columns>HSvc_Operation__c</columns>
        <columns>HSvc_Related_to__c</columns>
        <columns>HSvc_Target__c</columns>
        <columns>HSvc_Target_URL__c</columns>
        <columns>HSvc_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSvc_Operation__c</field>
            <operation>equals</operation>
            <value>Send SMS</value>
        </filters>
        <label>Send SMS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IL-{000000000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>